# igamemeshlab

./: .editorconfig  .gitignore  CMakeLists.txt
Actors/: A_Background.cpp  A_Background.h  A_Hexmesh.cpp  A_Hexmesh.h  A_Polygonmesh.cpp  A_Polygonmesh.h  A_Polyhedralmesh.cpp  A_Polyhedralmesh.h  A_Quadmesh.cpp  A_Quadmesh.h  A_Tetmesh.cpp  A_Tetmesh.h  A_Trimesh.cpp  A_Trimesh.h  A_WorldCoordinate.cpp  A_WorldCoordinate.h  ActorBase.cpp  ActorBase.h  ActorModelBase.cpp  ActorModelBase.h
GL/: Camera.cpp  Camera.h  Light.cpp  Light.h  MaterialBase.cpp  MaterialBase.h  ShaderUtils.cpp  ShaderUtils.h  Trackball.cpp  Trackball.h
GL/Materials/: M_BlinnPhong.cpp  M_BlinnPhong.h  M_Flat.cpp  M_Flat.h  M_Lines.cpp  M_Lines.h  M_Points.cpp  M_Points.h  Material.h  MaterialBase.cpp  MaterialBase.h  MaterialEnum.h  Materials.h
GUI/: KeyState.cpp  KeyState.h  MeshRender.cpp  MeshRender.h  MouseState.cpp  MouseState.h  SceneManger.cpp  SceneManger.h  SceneModelItem.cpp  SceneModelItem.h  SceneModelItem.ui  iGameMeshLab.cpp  iGameMeshLab.h  iGameMeshLab.ui  main.cpp
MeshKernel/: Edge.h  Face.h  IO.h  Mesh.cpp  Mesh.h  Vertex.h
resources/: iGameMeshLab.qrc
resources/shaders/: blinnphong.shader  flat.shader
